fix: adjusted spacing inbetween sections

--- a/app/mycomponent.css
+++ b/app/mycomponent.css
@@ -56,7 +56,6 @@
 
 .logo-skew {
     transform: skew(-30deg);
-    -webkit-transform: skew(-30deg);
 }
 
 *.light {
